--- a/app/views/twitter/search.html.erb
+++ b/app/views/twitter/search.html.erb
@@ -1,7 +1,28 @@
-Search for "<%= @query %>"
+<!-- Search for "<%= @query %>"
 <% @tweets.each do |tweet| %>
 <p>
 	<%= image_tag tweet['user']['profile_image_url'] %>
 	<%= tweet['text'] %>
 </p>
-<% end %>
+<% end %> -->
+ <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+    <script>
+		function initialize() {
+		  var myLatlng = new google.maps.LatLng(-25.363882,131.044922);
+		  var mapOptions = {
+		    zoom: 4,
+		    center: myLatlng,
+		    mapTypeId: google.maps.MapTypeId.ROADMAP
+		  }
+		  var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+
+		  var marker = new google.maps.Marker({
+		      position: myLatlng,
+		      map: map,
+		      title: 'Hello World!'
+		  });
+		}
+
+		google.maps.event.addDomListener(window, 'load', initialize);
+    </script>
+	<div id="map-canvas"></div>
